storage cleanup